[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuse4dbricks"
version = "0.1.0"
description = "High-performance FUSE driver for Databricks Unity Catalog Volumes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sergio Oller", email = ""}
]
keywords = ["databricks", "fuse", "unity-catalog", "filesystem", "async", "trio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "pyfuse3>=3.2.0",
    "trio>=0.22.0",
    "msal>=1.20.0",
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/tu-usuario/fuse4dbricks"

[project.scripts]
fuse4dbricks = "fuse4dbricks.main:cli_entry_point"

[tool.hatch.build.targets.wheel]
packages = ["fuse4dbricks"]
